temporal-verifier/examples/snapshots/consensus.fly.snap
---
source: temporal-verifier/tests/test_examples.rs
description: "--expect-fail -- verify examples/consensus.fly"
expression: combined_stdout_stderr
---

======== STDERR: ===========
verification errors:
error: invariant is not inductive
   ┌─ examples/consensus.fly:40:5
   │
40 │     invariant exists q:quorum. forall n1:node, n2:node, n3:node. forall v:value. !vote_request_msg(n1, n1)
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   = counter example:
     state 0:
     member(@node_0,@quorum_0) = true
     vote_request_msg(@node_0,@node_0) = false
     voted(@node_0) = false
     vote_msg(@node_0,@node_0) = false
     votes(@node_0,@node_0) = false
     leader(@node_0) = false
     decided(@node_0,@value_0) = false
     
     state 1:
     member(@node_0,@quorum_0) = true
     vote_request_msg(@node_0,@node_0) = true
     voted(@node_0) = false
     vote_msg(@node_0,@node_0) = false
     votes(@node_0,@node_0) = false
     leader(@node_0) = false
     decided(@node_0,@value_0) = false

error: invariant is not inductive
   ┌─ examples/consensus.fly:41:5
   │
41 │     invariant exists q:quorum. forall n1:node, n2:node, n3:node. forall v:value. !vote_request_msg(n1, n2)
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   = counter example:
     state 0:
     member(@node_0,@quorum_0) = true
     vote_request_msg(@node_0,@node_0) = false
     voted(@node_0) = false
     vote_msg(@node_0,@node_0) = false
     votes(@node_0,@node_0) = false
     leader(@node_0) = false
     decided(@node_0,@value_0) = false
     
     state 1:
     member(@node_0,@quorum_0) = true
     vote_request_msg(@node_0,@node_0) = true
     voted(@node_0) = false
     vote_msg(@node_0,@node_0) = false
     votes(@node_0,@node_0) = false
     leader(@node_0) = false
     decided(@node_0,@value_0) = false


